<resources>
    <string name="app_name">RecipePal</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lasagna">Lasagna</string>
    <string name="view">View</string>
    <string name="pancakes">Pancakes</string>
    <string name="recipeFragmentTitle">Recipes</string>
    <string name="welcome_header">Welcome to RecipePal!</string>
    <string name="welcome_p">Click the button to get started</string>
    <string name="welcome_button">Start</string>
    <string name="createButton">Create</string>
    <string name="cancelButton">Cancel</string>
    <string name="createTitle">Create Title</string>
    <string name="addIngredients">Add Ingredients</string>
    <string name="addInstructions">Add Instructions</string>

    <!--Fragement detailed recipe-->-->
    <string name="img_description_detailed">recipe image</string>
    <string name="textView_Recipe_Title">Title</string>

    <string name="recipe_instructions_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
            </string>

    <string name="recipe_ingredient_text">Lorem ipsum dolor sit amet, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
            </string>

    <string name="detailed_ingredients">Ingredients</string>
    <string name="detailed_instructions">Instructions</string>
    <string name="detailed_close_button">Close</string>

    <string name="addImageURL">Add Image URL</string>
    <string name="updateRecipe">Update</string>
    <string name="updateTitle">Update Title</string>

    <!--Menu Bottom Nav Bar-->-->
    <string name="menu_drawer_item_back">Back</string>

    <!--Menu Top Toolbar-->-->
    <string name="help_title">Help</string>

    <string name="help_fragment_title">Here\'s how to navigate through the app</string>

    <string name="help_fragment_info">

1. After clicking "start" in home screen, you\'ll see a list of delicious recipes. Tap on the "view" icon to view recipe details.\n
\n2. In the detailed view, you\'ll find the recipe\'s ingredients and instructions. You can scroll to read through them.\n
\n3. Tap on the pencil icon to edit the recipe. You must press the "update" button for the changes to be saved.\n
\n4. Tap on the trash icon to delete the recipe. You will not be able to recover a recipe once it has been deleted.\n
\n5. Tap on the plus icon at the bottom right of the recipe dashboard screen to create a new recipe.\n
\n6. Use the "Close" or "Cancel" button to return to the recipe list.\n
\n7. You can always return to the previous screen by tapping the back arrow button located at the top left corner of the app.\n
\nEnjoy cooking!
    </string>
    <string name="confrim_deletion">Confrim Deletion</string>
    <string name="ask_deletion_confrimation">Are you sure you want to delete?</string>
    <string name="deleteButton">Delete</string>
    <string name="edit_button">Edit</string>
</resources>
