<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateRecipeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp">

        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/createTitle" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:gravity="top"
            android:padding="8dp"
            android:scrollbars="vertical"
            android:hint="@string/addIngredients"
            android:inputType="textMultiLine"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:gravity="top"
            android:padding="8dp"
            android:scrollbars="vertical"
            android:hint="@string/addInstructions"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="16dp">
            <Button
                android:id="@+id/cancelButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/cancelButton"
                android:layout_marginEnd="100dp"/>
            <Button
                android:id="@+id/createButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/createButton" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>