<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WelcomeFragment"
    android:orientation="vertical"
    android:gravity="center | top">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_header"
        android:textSize="32dp"
        android:layout_marginTop="200dp"
        android:layout_marginBottom="20dp"
        android:textFontWeight="700"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_p"
        android:textSize="24dp"
        android:layout_marginBottom="40dp"/>
    <Button
        android:id="@+id/welcomeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_button"/>

</LinearLayout>